--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,9 +5,7 @@
 
     {{ .Content }}
 
-    <div id="instafeed" class="wrap">
-        <span class="loading">Loading</span>
-    </div>
+    <div id="instafeed" class="wrap"></div>
 
     {{ partial "footer.html" . }}
   </body>
