--- a/themes/hugo-theme-tres/layouts/partials/head.html
+++ b/themes/hugo-theme-tres/layouts/partials/head.html
@@ -3,4 +3,8 @@
   <link rel="stylesheet" href="{{ "css/owl.carousel.min.css" | relURL }}" />
   <link rel="stylesheet" href="{{ "css/owl.theme.default.min.css" | relURL }}" />
   <link rel="stylesheet" href="{{ "css/main.css" | relURL }}" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:title" content="Jolie Creations • SF" />
+  <meta property="og:type" content="website" />
 </head>
